# describe

./: .ghci  README.md  describe.cabal  global-install.ps1  global-install.sh  stack.yaml
src/: Describe.hs
