name:                describe
version:             0.0.0
synopsis:            Describe Haskell code using template Haskell
description:         Using template Haskell, describe given Haskell code.
homepage:            https://github.com/chrisdone/describe#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2017 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Describe
  build-depends:       base >= 4.7 && < 5, template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/describe
